# app/models/eventsModel.py
@@ -8,13 +8,14 @@ class Events(Base):
 
     id = Column(Integer, primary_key=True, index=True, autoincrement=True)
     name = Column(String(255), default="")
-    date = Column(String, default=str(datetime.now()))
+    date_init = Column(String, default=str(datetime.now()))
+    date_final = Column(String, default=str(datetime.now()))
     desc = Column(String, default="")
     closed = Column(Boolean, default=False)
     user_id = Column(Integer, ForeignKey("users.id"), nullable=False)
     car_id = Column(Integer, ForeignKey("cars.id"), nullable=True)
-
-    cars = relationship("Cars", cascade="all, delete")
-    user = relationship("User", back_populates="events", cascade="all, delete")
     created_at = Column(DateTime(timezone=True), server_default=func.now())
     updated_at = Column(DateTime(timezone=True), server_default=func.now(), onupdate=func.now())
+
+    cars = relationship("Cars")
+    user = relationship("User", back_populates="events")
